--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,12 @@
-beautifulsoup4==4.12.3
-PyPDF2==3.0.1
-chromadb==0.4.14
-langchain==0.1.4
-langchain_community==0.0.16
-langchain_core==0.1.17
-langchain_openai==0.0.5
-mistralai==0.0.12
-openai==1.10.0
-streamlit==1.27.2
+beautifulsoup4
+PyPDF2
+chromadb
+langchain
+langchain_community
+langchain_core
+langchain_openai
+openai
+streamlit
 pypdf
 tiktoken
 faiss-cpu
